# Secure-Instant-Messaging-System-based-on-Steganography

./: .gitattributes  README.md  gradle.properties  local.properties  settings.gradle
Gesture/: build.gradle
app/: CMakeLists.txt  build.gradle  google-services.json
app/openssl-armeabi-v7a/include/openssl/: dh.h
app/src/androidTest/java/com/tencent/qcloud/timchat/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/layout/: activity_about.xml  activity_add_friend.xml  activity_addnew.xml  activity_apply_group.xml  activity_black_list.xml  activity_chat.xml  activity_choose_friend.xml  activity_creategroup.xml  activity_dialog.xml  activity_edit.xml  activity_friendship_handle.xml  activity_friendship_manage_message.xml  activity_group_chat_setting.xml  activity_group_list.xml  activity_group_manage_message.xml  activity_group_member.xml  activity_group_member_profile.xml  activity_home.xml  activity_image_preview.xml  activity_image_view.xml  activity_main.xml  activity_message_notify_setting.xml  activity_profile.xml  activity_search_group.xml  activity_splash.xml  activity_video.xml  activity_video_preview.xml  activity_video_publisher.xml  activity_video_record.xml  contact_more.xml  dialog_addgroup.xml  dialog_delete_group.xml  fragment_beauty_area.xml  fragment_contact.xml  fragment_conversation.xml  fragment_setting.xml  home_tab.xml  item_childmember.xml  item_conversation.xml  item_group.xml  (+5 more)
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
sdk/: build.gradle
(+137 files in other folders)
